--- a/package.json
+++ b/package.json
@@ -11,15 +11,28 @@
   "dependencies": {
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
+    "deprecated-react-native-prop-types": "^5.0.0",
     "expo": "^50.0.0",
+    "expo-document-picker": "^11.10.1",
+    "expo-mail-composer": "^12.7.1",
     "expo-status-bar": "~1.11.1",
+    "openai": "^4.26.0",
     "react": "18.2.0",
     "react-native": "0.73.2",
     "react-native-fs": "^2.20.0",
+    "react-native-gifted-chat": "^2.4.0",
+    "react-native-google-places-autocomplete": "^2.5.6",
+    "react-native-maps": "^1.10.0",
+    "react-native-modal": "^13.0.1",
+    "react-native-snap-carousel": "^3.9.1",
+    "react-native-swiper": "^1.6.0",
     "react-navigation": "^4.4.4",
     "react-navigation-stack": "^2.10.4",
     "react-redux": "^9.1.0",
-    "redux": "^5.0.1"
+    "redux": "^5.0.1",
+    "react-native-web": "~0.19.6",
+    "react-dom": "18.2.0",
+    "@expo/metro-runtime": "~3.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
