--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,8 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@clerk/clerk-expo": "^0.20.1",
+    "@expo/metro-runtime": "~3.1.1",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
     "deprecated-react-native-prop-types": "^5.0.0",
@@ -16,8 +18,10 @@
     "expo-document-picker": "^11.10.1",
     "expo-mail-composer": "^12.7.1",
     "expo-status-bar": "~1.11.1",
+    "expo-web-browser": "^12.8.2",
     "openai": "^4.26.0",
     "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-native": "0.73.2",
     "react-native-fs": "^2.20.0",
     "react-native-gifted-chat": "^2.4.0",
@@ -26,13 +30,12 @@
     "react-native-modal": "^13.0.1",
     "react-native-snap-carousel": "^3.9.1",
     "react-native-swiper": "^1.6.0",
+    "react-native-web": "~0.19.6",
     "react-navigation": "^4.4.4",
     "react-navigation-stack": "^2.10.4",
     "react-redux": "^9.1.0",
     "redux": "^5.0.1",
-    "react-native-web": "~0.19.6",
-    "react-dom": "18.2.0",
-    "@expo/metro-runtime": "~3.1.1"
+    "typescript": "^5.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
