--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "@clerk/clerk-expo": "^0.20.1",
     "@expo/metro-runtime": "~3.1.1",
+    "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
+    "axios": "^1.6.7",
     "deprecated-react-native-prop-types": "^5.0.0",
     "expo": "^50.0.0",
     "expo-document-picker": "^11.10.1",
@@ -26,6 +28,7 @@
     "react-native-fs": "^2.20.0",
     "react-native-gifted-chat": "^2.4.0",
     "react-native-google-places-autocomplete": "^2.5.6",
+    "react-native-heroicons": "^4.0.0",
     "react-native-maps": "^1.10.0",
     "react-native-modal": "^13.0.1",
     "react-native-snap-carousel": "^3.9.1",
@@ -38,7 +41,9 @@
     "typescript": "^5.3.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "nativewind": "^2.0.11",
+    "tailwindcss": "^3.4.1"
   },
   "private": true
 }
