--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@clerk/clerk-expo": "^0.20.1",
     "@expo/metro-runtime": "~3.1.1",
+    "@react-native-async-storage/async-storage": "^1.21.0",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
     "axios": "^1.6.7",
@@ -25,6 +26,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.73.2",
+    "react-native-async-storage": "^0.0.1",
+    "react-native-dotenv": "^3.4.9",
     "react-native-fs": "^2.20.0",
     "react-native-gifted-chat": "^2.4.0",
     "react-native-google-places-autocomplete": "^2.5.6",
