--- a/frontend/app.json
+++ b/frontend/app.json
@@ -21,10 +21,16 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.naveen03.Dr_Free"
     },
     "web": {
       "favicon": "./assets/favicon.png"
+    },
+    "extra": {
+      "eas": {
+        "projectId": "9c85623d-4dd0-42f6-8bf5-56a112f0fbe4"
+      }
     }
   }
 }
