--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,4 @@
 CONNECTION_URL = mongodb+srv://drfreeofficial:teamgusto1@drfree.9foucte.mongodb.net/?retryWrites=true&w=majority
 JWT_SECRET=Dr_FREE
+AUTH_EMAIL= drfreeofficial@outlook.com
+AUTH_PASS = teamgusto$1
