--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,9 @@
     "mongodb": "^6.3.0",
     "mongoose": "^8.1.1",
     "moongoose": "^0.0.5",
-    "nodemon": "^3.0.3"
+    "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.9",
+    "nodemon": "^3.0.3",
+    "passport": "^0.7.0"
   }
 }
