--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,8 @@
   },
   "dependencies": {
     "@clerk/clerk-expo": "^0.20.1",
-    "@expo/metro-runtime": "~3.1.1",
+    "@expo/config": "^8.1.1",
+    "@expo/metro-runtime": "^3.1.3",
     "@react-native-async-storage/async-storage": "^1.21.0",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
@@ -25,7 +26,7 @@
     "openai": "^4.26.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.73.2",
+    "react-native": "^0.73.4",
     "react-native-async-storage": "^0.0.1",
     "react-native-dotenv": "^3.4.9",
     "react-native-emoji-selector": "^0.2.0",
@@ -51,7 +52,8 @@
     "typescript": "^5.3.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@types/react-native": "^0.73.0"
   },
   "private": true
 }
