--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,16 +13,23 @@
     "@expo/config": "^8.1.1",
     "@expo/metro-runtime": "^3.1.3",
     "@react-native-async-storage/async-storage": "^1.21.0",
+    "@react-native-firebase/app": "^19.0.1",
+    "@react-native-firebase/messaging": "^19.0.1",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
     "axios": "^1.6.7",
     "deprecated-react-native-prop-types": "^5.0.0",
     "expo": "^50.0.5",
+    "expo-constants": "~15.4.5",
+    "expo-device": "~5.9.3",
     "expo-document-picker": "^11.10.1",
     "expo-image-picker": "^14.7.1",
+    "expo-location": "~16.5.5",
     "expo-mail-composer": "^12.7.1",
+    "expo-notifications": "~0.27.6",
     "expo-status-bar": "~1.11.1",
     "jwt-decode": "^4.0.0",
+    "native-notify": "^4.0.0",
     "openai": "^4.26.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -31,6 +38,7 @@
     "react-native-dotenv": "^3.4.9",
     "react-native-emoji-selector": "^0.2.0",
     "react-native-fs": "^2.20.0",
+    "react-native-get-location": "^4.0.1",
     "react-native-gifted-chat": "^2.4.0",
     "react-native-google-places-autocomplete": "^2.5.6",
     "react-native-heroicons": "^4.0.0",
@@ -40,6 +48,7 @@
     "react-native-maps": "^1.10.0",
     "react-native-modal": "^13.0.1",
     "react-native-progress": "^5.0.1",
+    "react-native-push-notification": "^8.1.1",
     "react-native-segmented-control-tab": "^4.0.0",
     "react-native-snap-carousel": "^3.9.1",
     "react-native-swiper": "^1.6.0",
