--- a/frontend/package.json
+++ b/frontend/package.json
@@ -58,7 +58,8 @@
     "react-navigation-stack": "^2.10.4",
     "react-redux": "^9.1.0",
     "redux": "^5.0.1",
-    "typescript": "^5.3.0"
+    "typescript": "^5.3.0",
+    "react-native-gesture-handler": "~2.14.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
